[workspace]
members = [
  "cli",
  "core",
  "nanolog-repl",
  "core-wasm",
  # "backend-cloudflare",
  # "examples/cloudflare-simple",
  # "worker-intake",
  # "worker-query",
  # "worker-indexing",
  # "worker-consolidation",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true

[workspace.dependencies]
anyhow = "1"
assert_matches = "1.5.0"
async-recursion = "1.0.4"
async-trait = "0.1.73"
chrono = { version = "0.4", features = ["serde"], default-features = true }
datafrog = "2.0.1"
env_logger = "0.10.0"
futures = "0.3.28"
human-panic = "1.1.5"
lalrpop = "0.20"
lalrpop-util = { version = "0.20", features = ["lexer", "unicode"] }
log = "0.4.19"
quickcheck = "1.0.3"
quickcheck_async = "0.1.1"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli"] }
rustyline = "12.0.0"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-serde = "0.8"
time = { version = "0.3" }
tokio-util = { version = "0.7", features = ["rt", "compat"] }
tracing = { version = "0.1", features = ["log"] }
url = "2"
uuid = { version = "1.4", features = [
  "v4",
  "v7",
  "js",
  "fast-rng",
  "macro-diagnostics",
] }
wasm-logger = "0.2.0"
whoami = "1.4"
