[package]
name = "pachadb-cli"
version = "0.0.0"
authors = ["Leandro Ostera <leandro@abstractmachines.dev>"]
edition = "2021"

[[bin]]
name = "pacha"
path = "main.rs"

[dependencies]
pachadb-core = { path = "../core", version = "*" }
pachadb-nanolog = { path = "../nanolog", version = "*" }

anyhow.workspace = true
env_logger.workspace = true
human-panic.workspace = true
reqwest.workspace = true
serde = { workspace = true }
serde_derive = { workspace = true }
tokio.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
structopt = { workspace = true }
tracing = { workspace = true }
url.workspace = true
whoami.workspace = true
chrono.workspace = true
