[package]
name = "pachadb-core"
version = "0.0.0"
edition = "2021"

[dependencies]
pachadb-nanolog = { path = "../nanolog", version = "*" }

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
futures.workspace = true
async-recursion = "1.0.4"
