[package]
name = "pachadb-core"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pachadb-nanolog = { path = "../nanolog", version = "*" }

anyhow.workspace = true
assert_matches.workspace = true
async-recursion.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
quickcheck_async.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
quickcheck.workspace = true
tokio.workspace = true
