[package]
name = "pachadb-core"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen", "serde_repr"]

[dependencies]
anyhow.workspace = true
assert_matches.workspace = true
async-recursion.workspace = true
async-trait.workspace = true
futures.workspace = true
lalrpop-util.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

time = { workspace = true, features = ["wasm-bindgen"] }
wasm-bindgen = { version = "0.2.87", optional = true }
serde_repr = { version = "0.1.16", optional = true }
log.workspace = true

[build-dependencies]
lalrpop.workspace = true

[dev-dependencies]
quickcheck_async.workspace = true
quickcheck.workspace = true
tokio.workspace = true
