[package]
name = "pachadb-nanolog-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "nanolog"
path = "src/repl.rs"

[dependencies]
pachadb-nanolog = { path = "../nanolog", version = "*" }
rustyline.workspace = true
