[package]
name = "pachadb-nanolog"
version = "0.1.0"
edition = "2021"

[dependencies]
lalrpop-util = { version = "0.20", features = ["lexer", "unicode"] }
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[build-dependencies]
lalrpop = "0.20"
