[package]
name = "pachadb-nanolog"
version = "0.1.0"
edition = "2021"

[dependencies]
lalrpop-util.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[build-dependencies]
lalrpop.workspace = true

[dev-dependencies]
quickcheck.workspace = true
