[package]
name = "pachadb-worker-consolidation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
pachadb-core = { path = "../core", version = "*" }

worker = { workspace = true, features = ["queue"] }
console_error_panic_hook = { version = "0.1.1", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3.28"
uuid.workspace = true
reqwest.workspace = true
chrono.workspace = true
wasm-logger = "0.2.0"
log = "0.4.19"
