[package]
name = "pachadb-worker-indexing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
pachadb-core = { path = "../core", version = "*" }

worker.workspace = true
console_error_panic_hook = { version = "0.1.1", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures.workspace = true
uuid.workspace = true
reqwest.workspace = true
chrono.workspace = true
wasm-logger.workspace = true
log.workspace = true
