[package]
name = "pachadb-worker-query"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
pachadb-core = { path = "../core", version = "*" }
pachadb-nanolog = { path = "../nanolog", version = "*" }

chrono.workspace = true
console_error_panic_hook = { version = "0.1.1", optional = true }
datafrog.workspace = true
futures.workspace = true
log.workspace = true
reqwest.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
uuid.workspace = true
wasm-logger.workspace = true
worker.workspace = true
