[package]
name = "pachadb-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
worker = "0.0.17"
console_error_panic_hook = { version = "0.1.1", optional = true }
serde = "1.0.180"
serde_json = "1.0.104"

[profile.release]
opt-level = "s"
