[package]
name = "pachadb-cloud-worker-query"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
pachadb-core = { path = "../core", version = "*" }
pachadb-backend-cloudflare = { path = "../backend-cloudflare", version = "*" }

chrono.workspace = true
console_error_panic_hook = { version = "0.1.1", optional = true }
futures.workspace = true
log.workspace = true
reqwest.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
uuid.workspace = true
wasm-logger.workspace = true
worker = { version = "0.0.17", features = ["queue"] }
